# chess

./: CMakeLists.txt  LICENSE.md
include/: ChessBoard.h  ChessPiece.h  Context.h  GameContext.h  Globals.h  LegalMovesOverlay.h  TextureManager.h  Timer.h
include/ChessPieces/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
src/: ChessBoard.cpp  GameContext.cpp  TextureManager.cpp  Timer.cpp  main.cpp
src/ChessePieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
